@@ -1,6 +1,7 @@
 Revision history for Dist-Zilla-Plugin-Babble
 
 {{$NEXT}}
+	  Add ::SubstituteAndReturn support.
 
 0.001     2018-08-19 19:51:03+02:00 Europe/Amsterdam
           Initial release to an unsuspecting world
